--- a/AndBible/res/values-hi/strings.xml
+++ b/AndBible/res/values-hi/strings.xml
@@ -4,7 +4,7 @@
   <!--Startup & Help-->
   <string name="splash_top_text">\nतब परमेश्वर ने कहा, “उजियाला हो” और उजियाला हो गया।\nउत्पत्ति 1:3</string>
   <string name="help_text">अगले या पिछले अध्याय के लिए स्क्रीन पर उंगली से बाएं/दाहिने जाओ\n अन्य कार्य के लिये \'मेनू\' दबाएँ</string>
-  <string name="help_text_long"><b>नेविगेशन</b>\nअगले या पिछले अध्याय के लिए स्क्रीन पर उंगली से बाएं/दाहिने जाओ।    \n\'फुल-स्क्रीन\' के लिये \'डबल-टैप\' कीजिए।\n   \n\n<b>मेनू</b>\nअध्ययन/कार्य के लिये \'मेनू\' दबाएँ।    \n    \nअन्य किताबें/बाइबिल के लिए: मेनू&gt;और&gt;\'अन्य किताबें डाउनलोड करें\'।\n\n<b>\'संदर्भ मेनू\'</b>\n    \nवर्तमान छंद संबंधित कार्य - छंद या वाक्य, लंबे समय तक दबाएँ।\n\nकिताब संबंधित - मेनू&gt;किताबें, फिर किताब के नाम पर लंबे समय तक दबाएँ।    \n\nअध्ययन-इतिहास संबंधित - \'बैक बटन\', लंबे समय तक दबाएँ। \n\n    \n<b>अध्याय सुनिए</b>\nअध्याय सुनिए - एक या अधिक अध्याय जोर से सुनिए (+ विराम, दोहराना)।\n    \n\n<b>मेरे टिप्पणीयां</b>\nटिप्पणी लिखने के लिए, छंद की \'संदर्भ मेनू\' चुनिए। \nटिप्पणी सूची के लिए मुख्य \'मेनू\' दबाएँ।\n    \n\n<b>पुस्तक-चिन्ह</b>\nपुस्तक-चिन्ह जोड़ने के लिए, छंद की \'संदर्भ मेनू\' चुनिए। \n\'पुस्तक-चिन्ह मैनेजर\' के लिए मुख्य \'मेनू\' दबाएँ। पुस्तक-चिन्ह वर्गीकृत करने के लिए \'लेबल\' का उपयोग करें (\'पुस्तक-चिन्ह मैनेजर\' के \'संदर्भ मेनू\' में)।  \n\n\n<b>खोज</b>\nखोज शब्दों में आप यह अक्षर भी शामिल कर सकते हैं: *, ?, AND, OR, NOT (अधिक विवरण के लिए \"Apache Lucene - Query Parser Syntax\" गूगल में ढूंढ़ना)।</string>
+  <string name="help_text_long"><b>नेविगेशन</b>\nअगले या पिछले अध्याय के लिए स्क्रीन पर उंगली से बाएं/दाहिने जाओ। \n\'फुल-स्क्रीन\' के लिये \'डबल-टैप\' कीजिए।\n \n\n<b>मेनू</b>\nअध्ययन/कार्य के लिये \'मेनू\' दबाएँ। \n \nअन्य किताबें/बाइबिल के लिए: मेनू&gt;\'अन्य किताबें डाउनलोड करें\';।\n\n<b>\'संदर्भ मेनू\'</b>\n \nवर्तमान छंद संबंधित कार्य - छंद या वाक्य, लंबे समय तक दबाएँ।\n\nकिताब संबंधित - मेनू&gt;किताबें, फिर किताब के नाम पर लंबे समय तक दबाएँ। \n\nअध्ययन-इतिहास संबंधित - \'बैक बटन\', लंबे समय तक दबाएँ। \n\n \n<b>अध्याय सुनिए</b>\nअध्याय सुनिए - एक या अधिक अध्याय जोर से सुनिए (+ विराम, दोहराना)।\n \n\n<b>मेरे टिप्पणीयां</b>\nटिप्पणी लिखने के लिए, छंद की \'संदर्भ मेनू\' चुनिए। \nटिप्पणी सूची के लिए मुख्य \'मेनू\' दबाएँ।\n \n\n<b>पुस्तक-चिन्ह</b>\nपुस्तक-चिन्ह जोड़ने के लिए, छंद की \'संदर्भ मेनू\' चुनिए। \n\'पुस्तक-चिन्ह मैनेजर\' के लिए मुख्य \'मेनू\' दबाएँ। पुस्तक-चिन्ह वर्गीकृत करने के लिए \'लेबल\' का उपयोग करें (\'पुस्तक-चिन्ह मैनेजर\' के \'संदर्भ मेनू\' में)। \n\n\n<b>खोज</b>\nखोज शब्दों में आप यह अक्षर भी शामिल कर सकते हैं: *, ?, AND, OR, NOT (अधिक विवरण के लिए \"Apache Lucene - Query Parser Syntax\" गूगल में ढूंढ़ना)।</string>
   <string name="version_text">संस्करण %s</string>
   <string name="no_sdcard_error">एक एस-डी कार्ड डालें और बाइबिल फिर से शुरू करें ।</string>
   <!--Main menu-->
@@ -106,11 +106,12 @@
   <string name="error_downloading">डाउनलोड में त्रुटि. इंटरनेट चेक करें</string>
   <string name="no_internet_connection">इंटरनेट उपलब्ध नहीं</string>
   <string name="storage_space_warning">किताब के लिए जगह कम है</string>
-  <string name="wait_for_bible">कृपया प्रतीक्षा करें, बाइबिल डाउनलोड \nहोने के बाद मुख्य स्क्रीन दिखाई देगा ।\n\nअगले किताबें/बाइबिल के लिए: मेनू&gt;और&gt;\'अन्य किताबें डाउनलोड करें\'।</string>
+  <string name="wait_for_bible">कृपया प्रतीक्षा करें, बाइबिल डाउनलोड \nहोने के बाद मुख्य स्क्रीन दिखाई देगा ।\n\nअगले किताबें/बाइबिल के लिए: मेनू&gt;\'अन्य किताबें डाउनलोड करें\'।</string>
   <string name="wait_for_bible_not_yet">कृपया प्रतीक्षा करें,\nबाइबिल डाउनलोड हो रहा है</string>
   <string name="download_complete_no_bibles">कोई बाइबिल उपलब्ध नहीं, कृपया \'बैक बटन\' दबाएँ</string>
   <string name="too_many_jobs">कई कार्य क्रियान्वित।  कृपया प्रतीक्षा करें।</string>
   <string name="document_not_installed">कृपया डाउनलोड करें \'%s\'</string>
+  <!--Install zip file-->
   <!--Daily Reading Plan-->
   <string name="rdg_plan_title">पठन-योजना</string>
   <string name="rdg_plan_selector_title">एक पठन-योजना चुनें</string>
