--- a/AndBible/res/values-lv/strings.xml
+++ b/AndBible/res/values-lv/strings.xml
@@ -4,7 +4,7 @@
   <!--Startup & Help-->
   <string name="splash_top_text">\"Un Dievs sacīja: \'Lai top gaisma\' un gaisma tapa.\" \nGenesis 1:03</string>
   <string name="help_text">Lai piekļūtu darbībām nospiediet MENU taustiņu\n\nPārvietojieties no vienas nodaļas uz otru izmantojot track-ball, D-pad vai uzsitot uz ekrāna ar pirkstu</string>
-  <string name="help_text_long">Lietošana\nPārvietojieties no vienas nodaļas uz otru izmantojot track-ball, D-pad vai uzsitot uz ekrāna ar pirkstu\n\nLai piekļūtu darbībām nospiediet MENU taustiņu \n\nLai lejuplādētu vairāk dokumentus nospiediet Menu/More/Lejuplādēt Dokumentus \n\nUzspiediet uz ekrāna un paturiet, Bībeles skatā, lai piekļūtu papildus darbībām ar aktīvo pantu. \nDokumentu sarakstā uzspiediet uz dokumenta un paturiet, lai dzēstu vai apskatītu papildinformāciju. \n\nBalss\nNospiediet Balss, lai piekļūtu izvēlnei un sāktu vai apturētu lasīšanu balsī.\n\nGrāmatzīmes\nGrāmatzīmes var pievienot izmantojot panta papildus darbības. Grāmatzīmju pārvaldniekam var piekļūt no pamatizvēlnes. Grāmatzīmju pārvaldnieka papildus darbības ļauj grupēt grāmatzīmes izmantojot atzīmes.</string>
+  <string name="help_text_long">Lietošana\nPārvietojieties no vienas nodaļas uz otru izmantojot track-ball, D-pad vai uzsitot uz ekrāna ar pirkstu\n\nLai piekļūtu darbībām nospiediet MENU taustiņu \n\nLai lejuplādētu vairāk dokumentus nospiediet Menu/Administrēšana/Lejuplādēt Dokumentus \n\nUzspiediet uz ekrāna un paturiet, Bībeles skatā, lai piekļūtu papildus darbībām ar aktīvo pantu. \nDokumentu sarakstā uzspiediet uz dokumenta un paturiet, lai dzēstu vai apskatītu papildinformāciju. \n\nBalss\nNospiediet Balss, lai piekļūtu izvēlnei un sāktu vai apturētu lasīšanu balsī.\n\nGrāmatzīmes\nGrāmatzīmes var pievienot izmantojot panta papildus darbības. Grāmatzīmju pārvaldniekam var piekļūt no pamatizvēlnes. Grāmatzīmju pārvaldnieka papildus darbības ļauj grupēt grāmatzīmes izmantojot atzīmes.</string>
   <string name="version_text">Versija %s</string>
   <string name="no_sdcard_error">Lūdzu, ievietojiet SD karti un startējiet And Bible vēlreiz.</string>
   <!--Main menu-->
@@ -117,7 +117,7 @@
   <string name="error_downloading">Kļūda lejupielādējot. Lūdzu, pārbaudiet savu interneta pieslēgumu.</string>
   <string name="no_internet_connection">Nevarēja izveidot savienojumu ar internetu</string>
   <string name="storage_space_warning">Atmiņā nepietiekama vieta .</string>
-  <string name="wait_for_bible">Lūdzu uzgaidiet, kamēr Bībeles lejuplāde būs pabeigta. Pēc tam tiksiet pārslēgts uz galveno logu.\n\nLejuplādējiet vairāk dokumentus vēlāk, navigējot ar izvēlnes taustiņu Menu button/Vairāk/Lejuplādēt dokumentus.</string>
+  <string name="wait_for_bible">Lūdzu uzgaidiet, kamēr Bībeles lejuplāde būs pabeigta. Pēc tam tiksiet pārslēgts uz galveno logu.\n\nLejuplādējiet vairāk dokumentus vēlāk, navigējot ar izvēlnes taustiņu Menu button/Administrēšana/Lejuplādēt dokumentus.</string>
   <string name="wait_for_bible_not_yet">Lūdzu uzgaidiet. Bībeles uzstādīšana vēl nav pabeigta.</string>
   <string name="download_complete_no_bibles">Neviena Bībele nav instalēta. Lūdzu nospiediet atpakaļ\nUn mēģiniet vēlreiz.</string>
   <string name="too_many_jobs">Pārāk daudz aktīvu uzdevumu. Lūdzu uzgaidiet kamēr daži tiek izpildīti un mēģiniet vēlreiz.</string>
