--- a/AndBible/res/values-hu/strings.xml
+++ b/AndBible/res/values-hu/strings.xml
@@ -5,19 +5,7 @@
   <string name="splash_top_text">
 \"Akkor ezt mondta Isten: Legyen világosság! És lett világosság.\"\nI. Mózes 1:3</string>
   <string name="help_text">A funkciók eléréséhez nyomd meg a MENÜ gombot\n\nAz előző vagy következő fejezethez ugráshoz, használd a trackballt, D-padot vagy húzd végig az ujjad a képernyőn</string>
-  <string name="help_text_long"><b>Navigáció</b>\nAz előző vagy következő fejezethez ugráshoz, használd a trackballt, D-padot vagy húzd végig az ujjad a képernyőn.\n\nKettős koppintással lehet be-/kikapcsolni a teljes képernyőt.
-\n\n<b>Menü</b>
-\nA funkciók eléréséhez nyomd meg a MENÜ gombot.\n\nTovábbi dokumentumok letöltéséhez nyomd meg a Menü / Egyebek / Dokumentumok letöltése opciót.
-\n\n<b>Felolvasás</b>\nNyomd meg a \"Felolvasás\" gombot a fejezet felolvasásához vagy a felolvasás leállításához.
-\n\n<b>Jegyzeteim</b>
-\nAz aktuális vershez kapcsolódó lehetőségekért nyomd hosszan a szöveget, hogy megnyíljon a helyi menü.\nA \"Jegyzeteim\" helyi menü opcióval lehet a jegyzeteket a versekhez rögzíteni. A meglévő jegyzeteket a főmenün keresztül érhetjük el.
-\n\n<b>Könyvjelzők</b>
-\nKönyvjelzőt a vers helyi menüjében hozhatsz létre. A könyvjelző-kezelő a főmenüben érhető el. A könyvjelző-kezelőben címkék segítségével lehet csoportosítani a könyvjelzőket.
-\n\n<b>Keresés</b>
-\nA kereső kifejezés tartalmazhat vezérlő karaktereket pl. *, ?, AND, OR, NOT (további lehetőségeket lásd az \"Apache Lucene - Query Parser Syntax\" oldalain).\n\n\n<b>Helyi menük</b>
-\nHosszan nyomva egy verset további funkciókat érhetsz el.
-\nHosszan nyomva egy dokumentumot a dokumentum-kezelőben törölheted azt, vagy további információkat érhetsz el.
-\nHosszan nyomva a Vissza gombot elérheted az Olvasás történetet.</string>
+  <string name="help_text_long"><b>Navigáció</b>\nAz előző vagy következő fejezethez ugráshoz, használd a trackballt, D-padot vagy húzd végig az ujjad a képernyőn.\n\nKettős koppintással lehet be-/kikapcsolni a teljes képernyőt. \n\n<b>Menü</b> \nA funkciók eléréséhez nyomd meg a MENÜ gombot.\n\nTovábbi dokumentumok letöltéséhez nyomd meg a Menü / Adminisztráció / Dokumentumok letöltése opciót. \n\n<b>Felolvasás</b>\nNyomd meg a \"Felolvasás\" gombot a fejezet felolvasásához vagy a felolvasás leállításához. \n\n<b>Jegyzeteim</b> \nAz aktuális vershez kapcsolódó lehetőségekért nyomd hosszan a szöveget, hogy megnyíljon a helyi menü.\nA \"Jegyzeteim\" helyi menü opcióval lehet a jegyzeteket a versekhez rögzíteni. A meglévő jegyzeteket a főmenün keresztül érhetjük el. \n\n<b>Könyvjelzők</b> \nKönyvjelzőt a vers helyi menüjében hozhatsz létre. A könyvjelző-kezelő a főmenüben érhető el. A könyvjelző-kezelőben címkék segítségével lehet csoportosítani a könyvjelzőket. \n\n<b>Keresés</b> \nA kereső kifejezés tartalmazhat vezérlő karaktereket pl. *, ?, AND, OR, NOT (további lehetőségeket lásd az \"Apache Lucene - Query Parser Syntax\" oldalain).\n\n\n<b>Helyi menük</b> \nHosszan nyomva egy verset további funkciókat érhetsz el. \nHosszan nyomva egy dokumentumot a dokumentum-kezelőben törölheted azt, vagy további információkat érhetsz el. \nHosszan nyomva a Vissza gombot elérheted az Olvasás történetet.</string>
   <string name="version_text">Verzió: %s</string>
   <string name="no_sdcard_error">Helyezz be egy SD-kártyát, és indítsd újra az And Bible-t.</string>
   <!--Main menu-->
@@ -130,7 +118,7 @@
   <string name="error_downloading">Hiba történt a letöltés közben. Kérlek, ellenőrizd az internetkapcsolatot.</string>
   <string name="no_internet_connection">Nem sikerült kapcsolódni az internethez.</string>
   <string name="storage_space_warning">Nincs elég üres hely az eszközön.</string>
-  <string name="wait_for_bible">Kérlek várj, amíg a Biblia teljesen letöltődik. Utána automatikusan a fő képernyő jelenik meg.\n\nTovábbi dokumentumokat később a Menü/Tovább/Dokumentumok letöltése menüpont alatt tölthetsz le.</string>
+  <string name="wait_for_bible">Kérlek várj, amíg a Biblia teljesen letöltődik. Utána automatikusan a fő képernyő jelenik meg.\n\nTovábbi dokumentumokat később a Menü/Adminisztráció/Dokumentumok letöltése menüpont alatt tölthetsz le.</string>
   <string name="wait_for_bible_not_yet">Kérlek várj. A Biblia telepítése még nem fejeződött be.</string>
   <string name="download_complete_no_bibles">Nincs Biblia telepítve. Nyomd meg a Vissza gombot, és próbáld újra.</string>
   <string name="too_many_jobs">Túl sok feladat fut. Kérlek várj, amíg valamelyik befejeződik és próbáld újra.</string>
