--- a/AndBible/res/values-ko/strings.xml
+++ b/AndBible/res/values-ko/strings.xml
@@ -4,7 +4,7 @@
   <!--Startup & Help-->
   <string name="splash_top_text">\"하나님이 빛이 있으라 하시매 빛이 있었고\" 창세기 1장 3절</string>
   <string name="help_text">실행을 위해 메뉴 키를 사용.\n손으로 D-패드를 움직이거나 손가락을 사용하여 \n이전 또는 다음 장으로 이동</string>
-  <string name="help_text_long"><b>실행을 위한 메뉴 키 사용</b>\n\n1. 문서를 다운로드하려면 다음 또는 이전 챕터로 이동합니다.\n2. 성경보기를 열고 메뉴 / 기타 / 다운로드 문서를 누르십시오.\n3. 현재구절에 영향을 미치는 작업은 내용 메뉴. \n   문서 선택에서 문서를 삭제하거나 정보를 공유할 수 있읍니다.\n\n<b>말하기</b>\n\n말하기를 누르면 대화창을 시작하거나 중단 합니다. \n북마크 관리자는 메인 메뉴를 통해 액세스할 수 있습니다. 북마크 관리자 컨텍스트 메뉴 즐겨찾기 꼬리표를 사용하여 그룹화 할 수 있습니다.</string>
+  <string name="help_text_long"><b>실행을 위한 메뉴 키 사용</b>\n\n1. 문서를 다운로드하려면 다음 또는 이전 챕터로 이동합니다.\n2. 성경보기를 열고 메뉴 / 관리 / 다운로드 문서를 누르십시오.\n3. 현재구절에 영향을 미치는 작업은 내용 메뉴. \n 문서 선택에서 문서를 삭제하거나 정보를 공유할 수 있읍니다.\n\n<b>말하기</b>\n\n말하기를 누르면 대화창을 시작하거나 중단 합니다. \n북마크 관리자는 메인 메뉴를 통해 액세스할 수 있습니다. 북마크 관리자 컨텍스트 메뉴 즐겨찾기 꼬리표를 사용하여 그룹화 할 수 있습니다.</string>
   <string name="version_text">버전의 %s</string>
   <string name="no_sdcard_error">SD 카드를 재삽입 한 뒤, 앱을 다시 시작합니다.</string>
   <!--Main menu-->
@@ -116,7 +116,7 @@
   <string name="error_downloading">다운로드 오류가 발생했습니다. 인터넷 연결을 확인하시기 바랍니다.</string>
   <string name="no_internet_connection">인터넷에 연결할 수 없습니다</string>
   <string name="storage_space_warning">저장 공간 부족</string>
-  <string name="wait_for_bible">성경 다운로드가 완료될 때까지 기다려 주십시오. </string>
+  <string name="wait_for_bible">성경 다운로드가 완료될 때까지 기다려 주십시오.</string>
   <string name="wait_for_bible_not_yet">설치가 완료될 때 까지 기다려주십시오.</string>
   <string name="download_complete_no_bibles">성경이 설치되지 않았습니다. 다시 시도 하십시오</string>
   <string name="too_many_jobs">너무 많은 작업이 실행되고 있습니다. </string>
