--- a/AndBible/res/values-th/strings.xml
+++ b/AndBible/res/values-th/strings.xml
@@ -4,7 +4,7 @@
   <!--Startup & Help-->
   <string name="splash_top_text">\n\"พระ​เจ้า​ตรัส​ว่า “จง​เกิด​ความ​สว่าง” ความ​สว่าง​ก็​เกิด​ขึ้น\"\nปฐมกาล 1:3</string>
   <string name="help_text">​กด​ปุ่ม เมนู เพื่อ​ตั้ง​ค่า\n\n​ไป​ยัง​บท​ถัดไป​หรือ​ก่อน​หน้า​โดย​ใช้​นิ้ว​ปัด​หน้าจอ (หรือ​ใช้ track-ball​, D-pad)</string>
-  <string name="help_text_long">\n​<b>การ​นำ​ทาง</b>\n​ไป​ยัง​บท​ถัดไป​หรือ​ก่อน​หน้า โดย​ใช้​นิ้ว​ปัด​หน้าจอ (หรือ​ใช้ track-ball​, D-pad) \n\n​<b>เมนู​</b>\n​กด​ปุ่ม เมนู เพื่อ​ตั้ง​ค่า\n\n​ดาวน์​โหลด​โมดูล ให้​กด​ปุ่ม เมนู​/​เพิ่มเติม​/​ดาวน์​โหลด​โมดูล\n\n<b>อ่าน​ให้​ฟัง</b>\n​กด​อ่าน​ให้​ฟัง เพื่อ​ตั้ง​ค่า​เริ่มต้น​หรือ​หยุด​การ​อ่าน\n\n<b>บันทึกส่วนตัว</b>\nสามารถเพิ่มบันทึก ผ่านทางรายการเมนูบันทึกส่วนตัว จากเมนูทางลัด รายการบันทึกที่มีอยู่แล้ว สามารถเข้าถึงได้ผ่านเมนูหลัก\n\n​<b>ตัว​คั่น</b>\n​สามารถ​เพิ่ม​ตัว​คั่น​ ผ่าน​เมนู​ทาง​ลัด​ของ​ข้อ​พระ​คัมภีร์ เข้าถึง​การ​จัดการ​ตัว​คั่น​ ได้​ผ่าน​ทาง​เมนู​หลัก เมนู​ทาง​ลัด​ใน​การ​จัดการ​ตัว​คั่น จะ​ช่วย​ให้​ตัว​คั่น​ถูก​จัด​กลุ่ม​โดย​ใช้​ป้าย​กำกับ\n\n<b>ค้นหา</b>\nค้นหาคำโดยใช้สัญลักษณ์ *, ?, AND, OR, NOT ช่วย (ดูรายละเอียดเพิ่มเติมจาก \"Apache Lucene - Query Parser Syntax\")\n\n​<b>เมนูทางลัด</b>\nกด​แช่​ใน​มุมมอง​พระ​คัมภีร์ เพื่อ​เปิด​เมนู​ทาง​ลัด​สำหรับ​จัดการ​ข้อ​ปัจจุบัน\n​กด​แช่​บน​โมดูล เพื่อ​ลบ​หรือ​ดู​ข้อมูล\nกดแช่ปุ่ม Back เพื่อดูประวัติการใช้งาน\n</string>
+  <string name="help_text_long">\n​<b>การ​นำ​ทาง</b>\n​ไป​ยัง​บท​ถัดไป​หรือ​ก่อน​หน้า โดย​ใช้​นิ้ว​ปัด​หน้าจอ (หรือ​ใช้ track-ball​, D-pad) \n\n​<b>เมนู​</b>\n​กด​ปุ่ม เมนู เพื่อ​ตั้ง​ค่า\n\n​ดาวน์​โหลด​โมดูล ให้​กด​ปุ่ม เมนู​/​​ดาวน์​โหลด​โมดูล\n\n<b>อ่าน​ให้​ฟัง</b>\n​กด​อ่าน​ให้​ฟัง เพื่อ​ตั้ง​ค่า​เริ่มต้น​หรือ​หยุด​การ​อ่าน\n\n<b>บันทึกส่วนตัว</b>\nสามารถเพิ่มบันทึก ผ่านทางรายการเมนูบันทึกส่วนตัว จากเมนูทางลัด รายการบันทึกที่มีอยู่แล้ว สามารถเข้าถึงได้ผ่านเมนูหลัก\n\n​<b>ตัว​คั่น</b>\n​สามารถ​เพิ่ม​ตัว​คั่น​ ผ่าน​เมนู​ทาง​ลัด​ของ​ข้อ​พระ​คัมภีร์ เข้าถึง​การ​จัดการ​ตัว​คั่น​ ได้​ผ่าน​ทาง​เมนู​หลัก เมนู​ทาง​ลัด​ใน​การ​จัดการ​ตัว​คั่น จะ​ช่วย​ให้​ตัว​คั่น​ถูก​จัด​กลุ่ม​โดย​ใช้​ป้าย​กำกับ\n\n<b>ค้นหา</b>\nค้นหาคำโดยใช้สัญลักษณ์ *, ?, AND, OR, NOT ช่วย (ดูรายละเอียดเพิ่มเติมจาก \"Apache Lucene - Query Parser Syntax\")\n\n​<b>เมนูทางลัด</b>\nกด​แช่​ใน​มุมมอง​พระ​คัมภีร์ เพื่อ​เปิด​เมนู​ทาง​ลัด​สำหรับ​จัดการ​ข้อ​ปัจจุบัน\n​กด​แช่​บน​โมดูล เพื่อ​ลบ​หรือ​ดู​ข้อมูล\nกดแช่ปุ่ม Back เพื่อดูประวัติการใช้งาน\n</string>
   <string name="version_text">รุ่นที่ %s</string>
   <string name="no_sdcard_error">กรุณาใส่ SD card และเริ่มต้น And Bible อีกครั้ง</string>
   <!--Main menu-->
@@ -107,6 +107,7 @@
   <string name="download_complete_no_bibles">ยังไม่ได้ติดตั้งโมดูลพระคัมภีร์ กรุณากด Back และลองอีกครั้ง</string>
   <string name="too_many_jobs">มีงานจำนวนมาก รอสักครู่ เพื่อให้บางงานเสร็จก่อน และลองใหม่อีกครั้ง</string>
   <string name="document_not_installed">กรุณาดาวน์โหลด \'%s\'</string>
+  <!--Install zip file-->
   <!--Daily Reading Plan-->
   <string name="rdg_plan_title">แผนการอ่าน</string>
   <string name="rdg_plan_selector_title">เลือกแผนการอ่าน</string>
